<resources>
    <!-- myAccount / sign in !-->
    <string name="app_name">Actor Template App</string>
    <string name="sign_in">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_account">My account</string>
    <string name="username">Username</string>
    <string name="useremail">Email</string>
    <string name="userrole">Userrole</string>

    <!-- menu pages !-->
    <string name="all_projects">Projects</string>
    <string name="add_project">New project</string>
    <string name="archive">Archive</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- create actor !-->
    <string name="actorRoleName">Rolename</string>
    <string name="hintActorRoleName">Enter rolename</string>
    <string name="actorDescription">Description</string>
    <string name="hintActorDescription">Enter description</string>

    <!-- create person !-->
    <string name="personPhoto">Photo</string>
    <string name="personName">Full name</string>
    <string name="hintPersonName">Enter full name</string>
    <string name="personEmail">Email</string>
    <string name ="hintPersonEmail">Enter email address</string>
    <string name ="personFunction">Function</string>
    <string name ="hintPersonFunction">Enter the persons function</string>
    <string name ="personPhonenumber">Phonenumber</string>
    <string name ="hintPersonPhonenumber">Enter phone number</string>
    <string name ="personNotes">Notes</string>
    <string name ="hintPersonNotes">Enter relevant notes</string>

    <!-- create project !-->
    <string name="projectName">Project title</string>
    <string name="hintProjectName">Enter project title</string>
    <string name="projectDescription">Description</string>
    <string name="hintProjectDescription">Enter project description</string>

    <!-- show actor content !-->
    <string name="actorContentProject">Project: </string>
    <string name="actorContentAddPerson">Add person</string>

    <!-- show project content !-->
    <string name="projectContentAddActor">Add actor template</string>

    <!-- messages !-->
    <string name="analystAction">Only the analist is allowed to take this action</string>
    <string name="emptyProjectName">The project name cannot be empty</string>
    <string name="emptyActorName">The actor role cannot be empty</string>
    <string name="emptyPersonName">The person name cannot be empty</string>
    <string name="invalidEmail">Not a valid email address</string>

    <!-- archive !-->
    <string name="archiveButtonPersons">Persons</string>
    <string name="archiveButtonActors">Actors</string>
    <string name="archiveButtonProjects">Projects</string>

    <!-- manifest !-->
    <string name="manifestShowProjectContent">Project detail</string>
    <string name="manifestCreateProject">New Project</string>
    <string name="manifestCreateActor">New Actor</string>
    <string name="manifestShowActorContent">Actor detail</string>
    <string name="manifestShowPersonContent">Person detail</string>
    <string name="manifestCreatePerson">New Person</string>
    <string name="manifestMyAccount">My Account</string>
    <string name="manifestArchive">Archive</string>

</resources>
