<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="nl.hu.fed.actortemplateapp.activity.CreateProject">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/projectName"
            android:id="@+id/aCreateProject_titleTv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/aCreateProject_titleEt"
            android:hint="@string/hintProjectName"/>

        <TextView
            android:text="@string/projectDescription"
            android:id="@+id/aCreateProject_descriptionTv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <EditText
            android:id="@+id/aCreateProject_descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:inputType="none"
            android:hint="@string/hintProjectDescription"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/save"
        android:id="@+id/aCreateProject_saveFab"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="top|left"
        app:backgroundTint="@android:color/holo_green_light" />

</android.support.design.widget.CoordinatorLayout>
