<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="nl.hu.fed.actortemplateapp.activity.Archive">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout">

        <ViewFlipper
            android:id="@+id/viewflipperArchive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tbShowProjectArchive"
            android:layout_toStartOf="@+id/tbShowProjectArchive"
            android:layout_marginTop="60dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPersonArchive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/tbShowProjectArchive"
                android:layout_toStartOf="@+id/tbShowProjectArchive" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvProjectArchive"
                android:layout_width="match_parent"
                android:layout_height="451dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tbShowProjectArchive"
                android:layout_toStartOf="@+id/tbShowProjectArchive" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvActorArchive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tbShowProjectArchive"
                android:layout_toStartOf="@+id/tbShowProjectArchive" />

        </ViewFlipper>

        <ToggleButton
            android:id="@+id/tbShowPersonArchive"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/archiveButtonPersons"
            android:textOff="@string/archiveButtonPersons"
            android:textOn="@string/archiveButtonPersons"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="221dp" />

        <ToggleButton
            android:id="@+id/tbShowActorArchive"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/archiveButtonActors"
            android:textOff="@string/archiveButtonActors"
            android:textOn="@string/archiveButtonActors"
            android:layout_above="@+id/tbShowPersonArchive"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp" />

        <ToggleButton
            android:id="@+id/tbShowProjectArchive"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/archiveButtonProjects"
            android:textOff="@string/archiveButtonProjects"
            android:textOn="@string/archiveButtonProjects"
            android:checked="true"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/tbShowActorArchive"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:id="@+id/archiveDeleteItem"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="top|left" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_set_as"
        android:id="@+id/archiveRestoreItem"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="bottom|center_horizontal"
        android:layout_gravity="top|right" />

</android.support.design.widget.CoordinatorLayout>
